# mdformat-mkdocs

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-test.yaml  .ruff.toml  .tool-versions  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_EXAMPLES.md  RESEARCH_INDEX.md  RESEARCH_SUMMARY.md  RESEARCH_UNSUPPORTED_FEATURES.md  mdsf.json  mise.toml  pyproject.toml  tmp.md  tox.ini
.github/workflows/: tests.yml
docs/: downstream.md  prevention.md
docs/article-summaries/: README.md  code-review-and-pr-best-practices.md  development-and-debugging.md  github-and-team-practices.md  logging-best-practices.md  python-best-practices.md  readme-best-practices.md  testing-best-practices.md
mdformat_mkdocs/: __init__.py  _backports.py  _helpers.py  _indent.py  _normalize_list.py  _postprocess_inline.py  plugin.py
mdformat_mkdocs/_copy_of_mdformat_gfm/: __init__.py  plugin.py
mdformat_mkdocs/_synced/admon_factories/: README.md  __init__.py  _whitespace_admon_factories.py
mdformat_mkdocs/mdit_plugins/: __init__.py  _content_tabs.py  _material_admon.py  _material_content_tabs.py  _material_deflist.py  _mkdocs_abbreviations.py  _mkdocs_admon.py  _mkdocs_anchors.py  _mkdocs_autorefs.py  _mkdocstrings_autorefs.py  _mkdocstrings_crossreference.py  _mkdocstrings_injection.py  _pymd_abbreviations.py  _pymd_admon.py  _pymd_arithmatex.py  _pymd_captions.py  _pymd_snippet.py  _python_markdown_admon.py  _python_markdown_attr_list.py  _spaced_url_link.py  _wikilink.py
mdformat_mkdocs/mdit_plugins/_mdit_py_plugins/: deflist.py
mdformat_mkdocs/mdit_py_plugins/admon/: index.py
mdformat_mkdocs/mdit_py_plugins/admon_helpers/: __init__.py  _helpers.py  helpers.py  index.py
mdformat_mkdocs/mdit_py_plugins/admon_mkdocs/: __init__.py  index.py
mdformat_mkdocs/mdit_py_plugins/admonition_blocks/: index.py
mdformat_mkdocs/mdit_py_plugins/content_tabs/: __init__.py  index.py
mdformat_mkdocs/plugins/: __init__.py  _content_tabs.py  _mkdocs_admon.py
mdformat_plugin/: __init__.py  plugin.py
mkdocs-demo/: README.md  mkdocs.yml  pyproject.toml
mkdocs-demo/docs/: README.md
scripts/: canary.py
test-13/: README.md  pyproject.toml
tests/: __init__.py  conftest.py  fixtures-admon-mkdocs.md  fixtures-admon.md  fixtures-mkdocs-content-tabs.md  fixtures-semantic-indent.md  fixtures-todo.md  fixtures.md  helpers.py  pre-commit-test-align_semantic_breaks_in_lists.md  pre-commit-test-align_semantic_breaks_in_numbered_lists.md  pre-commit-test-ignore_missing_references.md  pre-commit-test-numbered.md  pre-commit-test-recommended.md  pre-commit-test-todo.md  pre-commit-test.md  test_align_semantic_breaks_in_lists.py  test_align_semantic_breaks_in_numbered_lists.py  test_arithmatex_plugin_compat.py  test_fixtures.py  test_hypothesis.py  test_ignore_missing_references.py  test_inline_rule_protocol.py  test_mdformat.py  test_number.py  test_render.py  test_wrap.py
tests/format/: fixtures.md  test_abbreviations.py  test_align_semantic_breaks_in_lists.py  test_content_tabs.py  test_fixtures.py  test_format.py  test_ignore_missing_references.py  test_number.py  test_parsed_result.py  test_pymd_abbreviations.py  test_tabbed_code_block.py  test_text.py  test_wrap.py
tests/format/__snapshots__/: test_parsed_result.ambr
tests/format/fixtures/: abbreviations.md  angle_brackets_and_html.md  inline_code_whitespace.md  issue_37.md  material_content_tabs.md  material_deflist.md  material_math.md  math_with_mkdocs_features.md  mkdocs_autorefs.md  mkdocstrings_autorefs.md  mkdocstrings_injection.md  parsed_result.md  pymd_abbreviations.md  pymd_arithmatex.md  pymd_arithmatex_ams_environments.md  pymd_arithmatex_edge_cases.md  pymd_snippet.md  python_markdown_attr_list.md  regression.md  semantic_indent.md  text.md
tests/render/: test_render.py
tests/render/fixtures/: angle_brackets_and_html.md  content-tabs.md  material_content_tabs.md  material_deflist.md  matieral_admonitions.md  mkdocs_autorefs.md  mkdocstrings_autorefs.md  mkdocstrings_crossreference.md  pymd_abbreviations.md  pymd_arithmatex.md  pymd_captions.md  pymd_snippet.md  python_markdown_attr_list.md
