[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.10"]

[project]
authors = [
  {email = "dev.act.kyle@gmail.com", name = "kyleking"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mdformat >= 0.7.19",
  "mdformat-gfm >= 0.3.6",
  "mdit-py-plugins >= 0.4.1",
  "more-itertools >= 10.5.0",
]
description = "An mdformat plugin for mkdocs and Material for MkDocs"
keywords = ["markdown", "markdown-it", "mdformat", "mdformat_plugin_template"]
license = "MIT"
license-files = ["LICENSE"]
name = "mdformat_mkdocs"
readme = "README.md"
requires-python = ">=3.10.0"
version = "5.1.4"

[project.entry-points."mdformat.parser_extension"]
mkdocs = "mdformat_mkdocs"

[project.optional-dependencies]
recommended = [
  # Keep in-sync with README
  "mdformat-beautysh >= 0.1.1",
  "mdformat-config >= 0.2.1",
  "mdformat-footnote >= 0.1.1",
  "mdformat-front-matters >= 0.1.0",
  "mdformat-gfm >=1.0.0",
  "mdformat-ruff >= 0.1.3",
  "mdformat-simple-breaks >= 0.0.1",
  "mdformat-web >= 0.2.0",
  "mdformat-wikilink >= 0.2.0",
  # Patches https://github.com/lovesegfault/beautysh/issues/248 for Python 3.12
  "setuptools",
]
recommended-mdsf = [
  # Keep in-sync with README
  "mdformat-footnote >= 0.1.0",
  "mdformat-front-matters >= 1.0.1",
  "mdformat-gfm >=1.0.0",
  "mdformat-hooks >= 0.1.0",
  "mdformat-simple-breaks >= 0.0.1",
  "mdformat-wikilink >= 0.2.0",
]
test = [
  "beartype >= 0.21.0",
  "pytest >= 9.0.1",
  "pytest-beartype >= 0.2.0",
  "pytest-cov >= 7.0.0",
  "syrupy >= 4.9.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/kyleking/mdformat-mkdocs/issues"
"Changelog" = "https://github.com/kyleking/mdformat-mkdocs/releases"
homepage = "https://github.com/kyleking/mdformat-mkdocs"

[tool.commitizen]
tag_format = "v${version}"
version = "5.1.4"
version_files = ["mdformat_mkdocs/__init__.py", "pyproject.toml:^version"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]
extra_checks = true
files = ["mdformat_mkdocs", "tests"]
no_implicit_reexport = true
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyright]
include = ["mdformat_mkdocs", "tests"]
pythonVersion = "3.10"

[tool.pytest-watcher]
ignore_patterns = []
now = true
patterns = ["*.ambr", "*.md", "*.py"]
runner = "tox"
# PLANNED: requires support for TYPE_CHECKING https://github.com/beartype/beartype/issues/477
# runner_args = ["-e", "test", "--", "--exitfirst", "--failed-first", "--new-first", "-vv", "--beartype-packages=mdformat_mkdocs"]
runner_args = ["-e", "test", "--", "--exitfirst", "--failed-first", "--new-first", "-vv"]

[tool.ruff]
# Docs: https://github.com/charliermarsh/ruff
# Tip: poetry run python -m ruff --explain RUF100
line-length = 88
target-version = 'py310'

[tool.ruff.lint]
ignore = [
  'ANN002', # Missing type annotation for `*args`
  'ANN003', # Missing type annotation for `**kwargs`
  'BLE001', # Do not catch blind exception: `Exception`
  'COM812', # missing-trailing-comma
  'CPY001', # Missing copyright notice at top of file
  'D203', # "1 blank line required before class docstring" (Conflicts with D211)
  'D213', # "Multi-line docstring summary should start at the second line" (Conflicts with D212)
  'DOC201', # `return` is not documented in docstring
  'DOC402', # `yield` is not documented in docstring
  'E501', # Line too long (89 > 88)
  'EM101', # Exception must not use a string literal, assign to variable first
  'FBT001', # Boolean-typed positional argument in function definition
  'FIX001', # Line contains FIXME
  'FIX002', # Line contains TODO
  'FIX004', # Line contains HACK
  'N803', # Argument name `startLine` should be lowercase
  'N815', # Variable `lineMax` in class scope should not be mixedCase
  'PLR0913', # Too many arguments in function definition (6 > 5)
  'S101', # Use of `assert` detected
  'TC002', # Move third-party import `mdformat.renderer.typing.Postprocess` into a type-checking block (for beartype)
  'TC003', # Move standard library import `argparse` into a type-checking block (for beartype)
  'TD001', # Invalid TODO tag: `FIXME`
  'TD002', # Missing author in TODO; try: `# TODO(<author_name>): ...`
  'TD003', # Missing issue link on the line following this TODO
  'TRY003', # Avoid specifying long messages outside the exception class
]
preview = true
select = ['ALL']
unfixable = [
  'ERA001', # Commented out code
]

[tool.ruff.lint.isort]
known-first-party = ['mdformat_mkdocs', 'tests']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = [
  'D104', # Missing docstring in public package
]
'tests/*.py' = [
  'ANN001', # Missing type annotation for function argument
  'ANN201', # Missing return type annotation for public function
  'ANN202', # Missing return type annotation for private function `test_make_diffable`
  'ARG001', # Unused function argument: `line`
  'D100', # Missing docstring in public module
  'D103', # Missing docstring in public function
  'PLC2701', # Private name import `_<>` from external module
  'PT004', # flake8-pytest-style: fixture does not return
  'S101', # Use of `assert` detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true

[tool.tomlsort.overrides."tool.pytest-watcher.*"]
inline_arrays = false

[tool.tomlsort.overrides."tool.tox.env.*"]
inline_arrays = false

[tool.tox]
# Docs: https://tox.wiki/en/4.23.2/config.html#core
basepython = ["py310", "py314"]
env_list = ["hook-min", "prek", "ruff", "test-min", "type"]
isolated_build = true
requires = ["tox>=4.32.0"]
skip_missing_interpreters = false

[tool.tox.env.cz]
basepython = ["py314"]
commands = [["cz", "bump", {default = [], extend = true, replace = "posargs"}]]
deps = "commitizen>=4.10.0"
description = "Bump version using commitizen. Optionally specify: '-- --increment MAJOR|MINOR|PATCH' or '-- --dry-run'"
skip_install = true

[tool.tox.env."hook-min"]
basepython = ["py310"]
commands = [["prek", "run", "--config=.pre-commit-test.yaml", "--all-files", {default = ["--show-diff-on-failure", "--verbose"], extend = true, replace = "posargs"}]]
deps = "prek>=0.2.17"

[tool.tox.env.prek]
basepython = ["py314"]
commands = [["prek", "run", "--all-files", {default = [], extend = true, replace = "posargs"}]]
deps = "prek>=0.2.17"
skip_install = true

[tool.tox.env.ruff]
basepython = ["py314"]
commands = [
  ["ruff", "check", ".", "--fix", {default = [], extend = true, replace = "posargs"}],
  ["ruff", "format", "."],
]
deps = "ruff>=0.14.5"
description = "Optionally, specify: '-- --unsafe-fixes'"
skip_install = true

[tool.tox.env.test]
basepython = ["py314"]
commands = [["pytest", "--cov=mdformat_mkdocs", {default = [], extend = true, replace = "posargs"}]]
# PLANNED: requires support for TYPE_CHECKING https://github.com/beartype/beartype/issues/477
# description = "Optionally, specify: '-- --exitfirst --failed-first --new-first -vv --beartype-packages=mdformat_mkdocs"
description = "Optionally, specify: '-- --exitfirst --failed-first --new-first -vv"
extras = ["test"]

[tool.tox.env."test-min"]
basepython = ["py310"]
commands = [["pytest", "--cov=mdformat_mkdocs"]]
extras = ["test"]

[tool.tox.env.type]
basepython = ["py314"]
commands = [["mypy", "./mdformat_mkdocs", {default = [], extend = true, replace = "posargs"}]]
deps = ["mypy>=1.18.2"]

[tool.tox.env_run_base]
# Validates that commands are set
commands = [["error-commands-are-not-set"]]

[tool.uv.build-backend]
module-root = ""
