[tool.poetry]
name = "test-13"
version = "0.1.0"
description = ""
authors = ["Kyle King <KyleKing@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mdformat-gfm = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
